--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "university-management-auth-service",
+  "name": "Digital-Cow-Hut-Backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
@@ -28,14 +28,14 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "mongoose": "^7.2.1",
+    "mongoose": "^7.3.0",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4"
